# hashwires-proof-of-income

./: .gitignore  Cargo.toml  README.md
issuer/: Cargo.toml
issuer/src/: issuer.rs  main.rs
provider/: Cargo.toml
provider/src/: constants.rs  main.rs  provider.rs
src/: main.rs
user-interface/: .env.sample  index.html  package.json  pnpm-lock.yaml
user-interface/src/: App.tsx
user-interface/src/components/layout/Navbar/: AppLogoContainer.tsx  MobileMenuButton.tsx  index.tsx
user-interface/src/components/ui/AccountSelect/: index.tsx
user-interface/src/components/ui/ErrorDialog/: index.tsx
user-interface/src/components/ui/PlanSelect/: index.tsx
user-interface/src/components/ui/SuccessAlert/: index.tsx
user-interface/src/components/ui/UserAvatar/: index.tsx  types.ts
user-interface/src/context/: account.ts  error.ts
user-interface/src/exception/: index.ts
user-interface/src/services/: plan.service.ts
user-interface/src/types/: heroicons.d.ts
