[package]
name = "hashwires-proof-of-income"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashwires = "0.1.0"
num-bigint = "0.4.3"
rand_core = "0.6.4"

[dependencies.blake3]
version = "0.3.7"
features = ["rayon"]
